--- a/desafios/modulo-3/d012/style.css
+++ b/desafios/modulo-3/d012/style.css
@@ -5,6 +5,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 /*font-family: 'Sriracha', cursive;*/
 
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -21,7 +27,7 @@ header {
 }
 
 header h1 {
-    font-family: 'Passion One', cursive;
+    font-family: var(--fonte2);
     font-weight: 400;
     font-size: 10vw;
     margin: 0px;
@@ -30,7 +36,7 @@ header h1 {
 }
 
 header p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fonte1);
     font-size: 0.8em;
     padding-bottom: 50px;
 }
@@ -54,14 +60,14 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
-    box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.315);
 }
 
 section p {
-    font-family: 'Sriracha', cursive;
+    font-family: var(--fonte3);
     font-size: 3.5vw;
     font-weight: 400;
     line-height: 2em;
+    padding-bottom: 2em;
 }
 
 section.imagem-flor {
@@ -70,6 +76,8 @@ section.imagem-flor {
     background-position: center right;
     background-size: cover;
     background-repeat: no-repeat;
+    text-shadow: 1px 1px 0px black;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.644);
 }
 
 p.paragrafo-flor {
@@ -87,6 +95,8 @@ section.imagem-cartas {
     background-position: center left;
     background-size: cover;
     background-repeat: no-repeat;
+    text-shadow: 1px 1px 0px black;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.623);
 }
 
 p.paragrafo-cartas {
@@ -99,7 +109,7 @@ p.paragrafo-cartas {
 }
 
 footer {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fonte1);
     font-size: 1.2em;
     background-color: black;
     color: white;
